--- a/Other/index.html
+++ b/Other/index.html
@@ -33,7 +33,7 @@ font-size: 1.0rem;
 line-height: 1.42;
 white-space: pre-wrap;
 direction: ltr;
-border: 1px solid #999; page-break-inside: avoid; -webkit-border-radius: 4px; border-radius: 4px; text-shadow: none;
+page-break-inside: avoid; -webkit-border-radius: 4px; border-radius: 4px; text-shadow: none;
 background-color: #f2f2f2; 
 }
 
